Add !important to error-cell class to override Bootstrap styles

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,6 @@ th {
 }
 
 .error-cell {
-  background-color: #f8d7da;
-  color: #000;
+  background-color: #f8d7da !important;
+  color: #000 !important;
 }
